--- a/views/ingredients/show.html
+++ b/views/ingredients/show.html
@@ -2,20 +2,22 @@
 <div class="container">
     <h2>Recettes contenant l'ingredient <span>{{ingredient.name}}</span></h2>
     <div class="row">
-        <div class="col-sm-3">
-            <img src="/uploads/{{recipe.picture}}" alt="{{recipe.name}}" width="100%">
-        </div>
-        <div class="col-sm-9">
-            <h2>{{ recipe.name }}</h2>
-            <p class="lead">
-                {{recipe.description}}
-            </p>
-            <a href="/edit/{{recipe._id}}" class="btn btn-primary">Editer</a>
-            <h4>ingredients :</h4>
-            {% for i in recipe.ingredients %}
-            <a href="/ingredients/{{i.name}}" class="badge badge-default">
-                {{i.name}}
-            </a>
+        <div class="container my-2 d-flex">
+            {% for r in recipes %}
+            <div class="col-4 col-md-4">
+                <div class="card" style="height:20rem!important;">
+                    <a href="/{{r.id}}">
+                        <div class="card-header">
+                            <h3 class="card-title text-center">{{r.name}}</h3>
+                        </div>
+        
+                        <img src="/uploads/{{r.picture}}" alt="{{r.name}}" class="card-img-top" width="100%">
+                    </a>
+                    <div class="card-body">
+                        <p class="card-text">{{r.description}}</p>
+                    </div>
+                </div>
+            </div>
             {% endfor %}
         </div>
     </div>
