--- a/views/recipes/show.html
+++ b/views/recipes/show.html
@@ -24,10 +24,10 @@
 
             <h4>Ingredients :</h4>
             {% for i in recipe.ingredients %}
-            <span class="badge ">
+            <a href="/ingredients/{{i.name}}" class="badge border border-secondary align-middle mx-1">
                 <!-- <img src="/uploads/{{i.icon}}" alt="{{i.name}}"> -->
                 {{i.name}}
-            </span>
+            </a>
             {% endfor %}
         </div>
     </div>
