--- a/views/layout.html
+++ b/views/layout.html
@@ -11,11 +11,14 @@
 <body>
     <div class="container">
         <a href="/">
-            <h1>Lorem, ipsum dolor.</h1>
+            <h1>Food labs</h1>
         </a>
-        {% block content %}{% endblock%}
+        <div>
+            {% block content %}{% endblock%}
+        </div>
         <hr>
-        <div class="text-center">
+
+        <div class="row text-center">
             Copyright &copy; 2019
         </div>
     </div>
