Front-end responsive optimisation
Optimised the layout for mobile display
Upcoming design relook

--- a/views/recipes/index.html
+++ b/views/recipes/index.html
@@ -4,19 +4,19 @@
         <h2>Recettes</h2>
         <a href="/new" class="btn btn-primary align-self-end">Ajouter une recette</a>
     </div>
-    <div class="container my-2 d-flex">
+    <div class="row my-2 justify-content-around">
         {% for r in recipes %}
-        <div class="col-4 col-md">
-            <div class="card" style="height:20rem!important;">
-                <a href="/{{r.id}}">
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="card m-1 border border-secondary" style="height:20rem!important;">
+                <a href="/{{r.id}}" style="overflow-y:hidden;">
                     <div class="card-header">
                         <h3 class="card-title text-center">{{r.name}}</h3>
                     </div>
-        
+                    
                     <img src="/uploads/{{r.picture}}" alt="{{r.name}}" class="card-img-top" width="100%">
                 </a>
-                    <div class="card-body">
-                        <p class="card-text">{{r.description}}</p>        
+                    <div class="card-footer">
+                        <p class="card-text font-weight-bold display-5">{{r.description}}</p>        
                     </div>
             </div>
         </div>
