--- a/views/recipes/index.html
+++ b/views/recipes/index.html
@@ -6,11 +6,11 @@
     </div>
     <div class="row my-2 justify-content-around">
         {% for r in recipes %}
-        <div class="col-12 col-md-6 col-lg-4">
-            <div class="card m-1 border border-secondary" style="height:20rem!important;">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="card mt-1 m-sm-1 border border-secondary" style="height:20rem!important;">
                 <a href="/{{r.id}}" style="overflow-y:hidden;">
                     <div class="card-header">
-                        <h3 class="card-title text-center">{{r.name}}</h3>
+                        <h4 class="card-title text-center">{{r.name}}</h4>
                     </div>
                     
                     <img src="/uploads/{{r.picture}}" alt="{{r.name}}" class="card-img-top" width="100%">
