--- a/views/layout.html
+++ b/views/layout.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="">
+    <meta name="author" content="Amané Hosanna">
     <!-- <link rel="stylesheet" href="/css/bootstrap.min.css"> -->
 
     <link rel="icon" href="/ressources/icons/FoodLabs_icon.png">
@@ -19,8 +21,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <nav class="navbar px-md-5 justify-content-between bg-dark navbar-dark bg-light border border-secondary">
-        <a href="/" class="nav-brand col-6 col-sm-5 col-md-4 col-lg-3 col-xl-2">
+    <nav class="navbar px-md-5 justify-content-between sticky-top bg-dark navbar-dark bg-light border border-secondary">
+        <a href="/" class="nav-brand col-6 col-sm-5 col-md-4 col-lg-3">
             <img src="/ressources/icons/FoodLabs_icon_text.png" alt="" width="100%">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -43,9 +45,23 @@
             </ul>
         </div>
     </nav>
+    <i id="top"></i>
         {% block content %}{% endblock%}
     <hr>
 
+    <footer class="text-center sticky-bottom">
+        <div class="container-fluid text-center">
+            <a href="#top" class="my-5">
+                <i class="fa fa-chevron-up"></i>
+            </a>
+        </div>
+        <div class="bg-dark text-light">
+            <p class="m-0">
+                Copyright &copy; NaN 3月 2019
+            </p>
+            <p class="m-0"><a href="https://github.com/Alloco225">Amané Hosanna</a></p>
+        </div>
+    </footer>
 </body>
 
 </html>
