--- a/views/recipes/index.html
+++ b/views/recipes/index.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %} {% block content %}
 <div class="container">
-    <div class="row justify-content-between">
+    <!-- <div class="row justify-content-between">
         <h2>Recettes</h2>
         <a href="/new" class="btn btn-primary align-self-end">Ajouter une recette</a>
-    </div>
+    </div> -->
     <div class="row my-2 justify-content-around">
         {% for r in recipes %}
         <div class="col-12 col-sm-6 col-md-4 col-lg-3">
