--- a/views/layout.html
+++ b/views/layout.html
@@ -45,7 +45,8 @@
             </ul>
         </div>
     </nav>
-    <i id="top"></i>
+    <div class="mt-5"></div>
+    <i id="top" class="mt-5"></i>
         {% block content %}{% endblock%}
     <hr>
 
